<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/word_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:hint="@string/edit_hint_text">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:insetBottom="0dp"
            android:text="@string/search_button_text" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cardView_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/word_item_paddingBottom">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_word"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/word_paddingRight"
                        android:textColor="@color/secondaryDarkColor"
                        android:textSize="@dimen/word_size"
                        android:textStyle="bold"
                        tool:text="@string/tool_word_text" />

                    <TextView
                        android:id="@+id/tv_pronunciation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/word_item_size"
                        tool:text="@string/tool_pronunciation_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_number"
                    style="@style/WordItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/word_item_paddingEnd"
                    tool:text="@string/definition_number" />

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/WordItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="(noun)" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_definition"
                style="@style/WordItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tool:text="@string/tool_definition_text" />

            <TextView
                android:id="@+id/tv_example_subtitle"
                style="@style/WordItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_item_text" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>